src/test/deca/context/valid/personalTests/null.deca
class A {}
class B extends A {}

{
null;
A a = null;
a = new A();
}