src/test/deca/context/invalid/personalTests/return_subclass_type.deca
class A {
    B getB() {
           return this;
       }

}
class B{
    A getA() {
        return new A() ;
    }
}

{
 A a = new A() ;
 a.getB();
}